--- a/index.ipynb
+++ b/index.ipynb
@@ -1887,7 +1887,7 @@
     }
    ],
    "source": [
-    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4]}, {'x': [3, 2, 3, 4], 'y': [1, 2, 3, 4]}\n",
+    "trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4]}, {'x': [1.5, 2.5, 3.5, 4.], 'y': [1, 2, 3, 4]}\n",
     "\n",
     "plotly.offline.iplot([\n",
     "    trace\n",
